# flashcards

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile-docker-osx  Dockerfile-v1  Dockerfile-v2-buildozer  Makefile  README.md  docker-compose.yml  pyproject.toml  toolchain_requirements.txt
.github/: pull_request_template.md
src/: Dockerfile  docker-compose.yml  flashcards.kv  flashcards.py  google_sheets.py  main.py
